# blender-mcp

./: .gitignore  .mcp.json  README.md  launcher.py  pyproject.toml  renovate.json
.github/workflows/: ci.yml  release.yml
blender_addon/: __init__.py  bridge.py  server.py
blender_addon/tools/: __init__.py  _helpers.py  _sandbox.py  animation.py  camera.py  lighting.py  materials.py  modifiers.py  nodes.py  objects.py  render.py  scene.py  scripting.py  world.py
docs/: development.md  llm-setup.md  security.md
scripts/: patch_version.py
tests/: conftest.py
tests/e2e/: test_e2e.py
tests/unit/: test_bridge.py  test_helpers.py  test_launcher.py  test_sandbox.py  test_server.py  test_tool_success.py  test_tool_validation.py
