[project]
name = "blender-mcp-launcher"
version = "0.1.0"
requires-python = ">=3.11"
license = {file = "LICENSE.txt"}
dependencies = [
    "mcp[cli]>=1.0",
    "httpx>=0.27",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["launcher.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = ["e2e: end-to-end tests requiring a running Blender instance"]

[tool.ruff]
target-version = "py311"
line-length = 100
exclude = ["audit", "scripts"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "S"]

[tool.ruff.lint.per-file-ignores]
# S101: assert is idiomatic in pytest
# S108: /tmp paths in tests are deliberate (mock values or out-of-home rejection tests)
"tests/**" = ["S101", "S108"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "blender_addon.*"
ignore_errors = true

[tool.hatch.envs.default]
features = ["test"]
dependencies = [
    "ruff",
    "mypy",
]

[tool.hatch.envs.default.scripts]
lint = "ruff check {args:.}"
typecheck = "mypy blender_addon/ launcher.py {args}"
test = "pytest tests/unit/ -v {args}"
test-all = "pytest tests/ -v {args}"
test-e2e = "pytest tests/e2e/ -v -m e2e {args}"
coverage = "pytest tests/unit/ -v --cov=blender_addon --cov=launcher --cov-report=term-missing {args}"
check = ["lint", "typecheck", "test"]
package = "python -c \"import shutil; shutil.make_archive('blender_mcp_addon', 'zip', '.', 'blender_addon')\""
